test/parse/strict/bad/leadingzerodigitval.sol
s SATISFIABLE
v 01 0
